--- a/package.xml
+++ b/package.xml
@@ -2,7 +2,8 @@
 <package>
   <name>jsklearn</name>
   <version>0.1.1</version>
-  <description>Methods that I learned</description>
+  <description>Machine Learning Methods that I learned</description>
+  <url>https://github.com/furushchev/jsklearn.git</url>
 
   <maintainer email="furushchev@jsk.imi.i.u-tokyo.ac.jp">Yuki Furuta</maintainer>
   <license>BSD</license>
